# gooey-gui-old

./: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  remix.config.js
app/: app.tsx  base.tsx  clientJsFix.tsx  dataTable.tsx  entry.client.tsx  entry.server.tsx  global-progres-bar.tsx  gooeyFileInput.tsx  handleRedirect.tsx  jsonFormInput.tsx  proxy.tsx  realtime.tsx  redis.server.tsx  renderProxy.tsx  renderedHTML.tsx  renderedMarkdown.tsx  root.css  root.tsx  settings.tsx  useHydrated.js  wix.tsx
app/base/: base.tsx
app/routes/: $.tsx  _index.tsx  fileUpload.tsx  home.tsx  styles.module.css
app/styles/: app.css  custom.css  styles.module.css
py/: pyproject.toml
py/examples/: counter.py  file_upload.py  hello_world.py  poem_gen.py
py/gooey_ui/: __init__.py  components.py  pubsub.py  state.py
scripts/: run-prod.sh
