[tool.poetry]
name = "gooey-ui"
version = "0.1.0"
description = ""
authors = ["Dev Aggarwal <devxpy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.12"
fastapi = "^0.85.2"
redis = "^4.5.1"
uvicorn = { extras = ["standard"], version = "^0.18.3" }
furl = "^2.1.3"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
openai = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
